--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo del inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>El mejot título del mundo</h1>
+                <p>Y este es el parrafo del inicio
+                     donde se van a poner cosas bien
+                     bien chidas 
+                </p>
+            </div>
+        </div>
     </body>
 </html>
