Finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog <span id="tagline">Tu blogeishon</span>
             </div>
             <div id="post">
                 <h1>El mejot título del mundo</h1>
