Agregado el contenido adicional del blog y otra tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,10 @@
                      donde se van a poner cosas bien
                      bien chidas 
                 </p>
+                <p>
+                    Le tengo que agregar otro parrafo
+                     y yo ya quiero hacer cosas en python
+                </p>
             </div>
         </div>
     </body>
