Agrege un parrafo, cambie cabecera y color de texto a azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blogeishon</span>
+                Hyperblog <span id="tagline">
+                    Tu Blog Maestro
+                </span>
             </div>
             <div id="post">
                 <h1>El mejot título del mundo</h1>
@@ -17,6 +19,9 @@
                 <p>
                     Le tengo que agregar otro parrafo
                      y yo ya quiero hacer cosas en python
+                </p>
+                <p>
+                    Otro mas unu
                 </p>
             </div>
         </div>
