--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu Blog de Cabecera</span>
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog 
+                <span id="tagline">Tu Blog de Cabecera</span>
             </div>
             <div id="post">
                 <h1>El mejot título del mundo</h1>
