Puse un footer bien chulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
                     Otro mas unu
                 </p>
             </div>
+            <div id="footer">
+                Hecho con amortz <3
+            </div>
         </div>
     </body>
 </html>
