Se arreglaron cocitas

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
                 <h1>El mejot título del mundo</h1>
                 <p>Y este es el parrafo del inicio
                      donde se van a poner cosas bien
-                     bien chidas 
+                     bien chidas. Un pequeño cambio
                 </p>
                 <p>
                     Le tengo que agregar otro parrafo
