agregé imagen de kirby

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                      donde se van a poner cosas bien
                      bien chidas 
                 </p>
+                <p><img src="imagenes/kirby.jpg" width="100%"></p>
                 <p>
                     Le tengo que agregar otro parrafo
                      y yo ya quiero hacer cosas en python
